--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -12,6 +12,7 @@
     </div>
 
     <span class="toolbar-spacer">{{companyName}}</span>
+    <button mat-mini-fab color="accent">{{alerts}}</button>
     <button mat-icon-button [matMenuTriggerFor]="menu">
       <mat-icon>more_vert</mat-icon>
     </button>
