--- a/src/app/dashboard/listsolicitations/listsolicitations.component.html
+++ b/src/app/dashboard/listsolicitations/listsolicitations.component.html
@@ -39,7 +39,7 @@
         <ng-container matColumnDef="select-offer">
           <mat-header-cell *matHeaderCellDef class="tableWidthUT"> Seleccionar </mat-header-cell>
           <mat-cell *matCellDef="let element" class="tableWidthUT">
-            <button mat-raised-button color="primary" (click)="selectOffer(element)">
+            <button [disabled]="element.answerText !== null" mat-raised-button color="primary" (click)="addPrice(element)">
               Aplicar
             </button>
           </mat-cell>
