Se agrega funcionalidad de creación de empresa

--- a/src/app/dashboard/create-companies/create-companies.component.css
+++ b/src/app/dashboard/create-companies/create-companies.component.css
@@ -34,7 +34,10 @@
   height: 40px;
 }
 
-.map {
-  width: 100%;
-  height: 400px;
+agm-map {
+  height: 300px;
+}
+
+.usr-rep {
+  text-align: center;
 }
