--- a/src/app/enter-password/enter-password.component.html
+++ b/src/app/enter-password/enter-password.component.html
@@ -1,9 +1,9 @@
 <div class="flex-container">
   <div class="card-access">
     <mat-card>
-      <div class="posImage">
+      <!-- <div class="posImage">
         <img src="/assets/americas.png" alt="Americas comunications" class="logo">
-      </div>
+      </div> -->
       <div class="newUser">
         <span class="newUserText">
             Enter password for the new user
