se actualiza la funcionalidad del chat

--- a/src/app/dashboard/chat/chat.component.html
+++ b/src/app/dashboard/chat/chat.component.html
@@ -1,5 +1,5 @@
 <div class="full-container">
-  <div class="container-txt">
+  <div *ngIf="msg !== undefined" class="container-txt">
     <div class="card-msg" *ngFor="let v of msg">
       <mat-card>
         <div *ngIf="v.flag === 'usuario'" class="user">
